fix: fix Our friends block gap

--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -318,7 +318,7 @@ section {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 58px;
+    gap: 59px;
     background-color: var(--grey-bg-color);
 }
 
